# Exercicios-programacao

./: .gitmodules  README.md  ex01.c
AulaTreino/: ex04.py  ex10.py  ex100.py  ex102.py  ex107-108-109.py  ex11.py  ex12.py  ex15.py  ex16.py  ex20.py  ex24.py  ex26.py  ex28.py  ex34.py  ex35.py  ex38.py  ex42.py  ex43.py  ex44.py  ex46.py  ex57.py  ex58.py  ex61.py  ex62.py  ex64.py  ex65.py  ex66.py  ex67.py  ex68.py  ex69.py  ex76.py  ex78.py  ex87.py  ex89.py  ex92.py  ex94.py  ex96.py  funcoes.py
algebra_linear/: introducao_a_algebra_linear.py
dart/: teste.dart
estrutura_de_dados/: readme.md
haskell/: bnf.txt  teste.hs
linguagem_cpp/: teste  teste.cpp
metodos_numericos/: ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  mdf_transiente.py  (+5 more)
sistemas_operacionais/gerenciador-memoria-virtual-main/: .gitignore  CMakeLists.txt  README.md  SignalsTest.c  boot.n  fib.n  iniciar.sh  n.md  nnc  test_parser.n
sistemas_operacionais/gerenciador-memoria-virtual-main/files/: exemplo.json  index.html  script.js  simulador.css  simulador.html  simulador.js  style.css
sistemas_operacionais/gerenciador-memoria-virtual-main/src/: HashMap.c  HashMap.h  ProcessHashMap.c  ProcessHashMap.h  ProcessQueue.c  ProcessQueue.h  Simulador.c  Simulador.h  StringBuilder.c  StringBuilder.h  TL.c  TL.h  main.c  main_menu.c  main_menu.h  n.c  n.h  n_interpreter.c  n_interpreter.h  nalloc.c  nalloc.h  nnc.c  process.c  process.h  tabelas.c  tabelas.h  web_server.c  web_server.h
sistemas_operacionais/gerenciador-memoria-virtual-main/src2/: iniciar.sh  main.c  menu.c  menu.h  programa
(+562 files in other folders)
